# ebotula

./: .gitignore  AUTHORS  BUGS  CODE_REVIEW.md  CONTRIBUTING.md  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.de  SECURITY.md  TODO  configure  configure.ac  configure.in  ebotula.spec.in  ircbot.vpj  ircbot.vpw  ircbot.vtg  jenkinsfile
.github/: pull_request_template.md
.github/workflows/: c-cpp.yml  general_build.yml  release.yml
debian/: README.Debian  changelog  clean  control  copyright  dirs  docs  ebotula.install  ebotula.service  ebotula.substvars  files  postinst  postrm.ex  prerm.ex  rules
developer_guide/: README
developer_guide/gdbm/: gdbm_1.html  gdbm_11.html  gdbm_12.html  gdbm_14.html  gdbm_15.html  gdbm_3.html  gdbm_5.html  gdbm_8.html
developer_guide/nls/: gettext_single.html
developer_guide/nls/gettext_single_files/: img1.html  img2.html  img3.html  memo.html
developer_guide/tools/addhead/: addhead  src_head
developer_guide/tools/gdbmview/: Makefile  gdbmview.c
doc/: Makefile.am  ebotula.1  ebotula.1.in  ebotula.conf.5  ebotula.conf.5.in  ebotula_db.1.in
documentation/: spezifikation
documentation/RFC/: CTCP.paper
documentation/gdbm/: gdbm_10.html  gdbm_13.html  gdbm_16.html  gdbm_17.html  gdbm_2.html  gdbm_4.html  gdbm_6.html  gdbm_7.html  gdbm_9.html  gdbm_toc.html
etc/: Makefile.am  ebotula.conf
intl/: dcigettext.c
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  de.gmo  de.po  ebotula.pot  es.po  fr.po  it.po
src/: Makefile  Makefile.am  account.c  account.h  baseconfig.c  baseconfig.h  callback.c  callback.h  callbacklist.c  callbacklist.h  cmdlist.c  cmdlist.h  command.c  command.h  config.h  config.h.in  configparser.c  configparser.h  ctcp.c  dbaccess.c  dbaccess.h  ebotula.conf  extract.c  extract.h  handles.c  handles.h  irc.c  irc.h  ircbot.c  ircbot.h  irchelp.c  irchelp.h  macro.h  messages.c  messages.h  network.c  network.h  parameter.c  parameter.h  parser.c  (+8 more)
src/include/: account.h  baseconfig.h  callback.h  callbacklist.h  cmdlist.h  cmdtypes.h  command.h  configparser.h  ctcp.h  dbaccess.h  extract.h  handles.h  irc.h  ircbot.h  irchelp.h  messages.h  network.h  parameter.h  parser.h  queue.h  timing.h  type.h  utilities.h
src/lang/: Makefile.am  irchelp_de.h  irchelp_eng.h  irchelp_ger.h  messages_de.h  messages_eng.h  messages_ger.h
testsuit/: Makefile.am  TEST_EXTENSION_SUGGESTIONS.md  callbacklist_test.c  configparser_test.c  ebotula_test.c  extract_test.c  parser_pipeline_test.c  queue_test.c  testsuit.c  utilities_test.c
testsuit/include/: callbacklist_test.h  configparser_test.h  ebotula_test.h  extract_test.h  parser_pipeline_test.h  queue_test.h  testsuit.h  utilities_test.h
tools/: Makefile.am  delete.c  delete.h  dump.c  exists.c  fetch.c  main.c  main.h  quote.c  store.c  store.h
tools/include/: dump.h  exists.h  fetch.h  quote.h
