AC_INIT(src/ircbot.c)
AM_INIT_AUTOMAKE(ebotula,0.1.1-dev)

AM_SANITY_CHECK

AC_PROG_CC
AC_PROG_INSTALL

AM_CONFIG_HEADER(src/config.h)

AC_HEADER_STDC
AC_CHECK_HEADERS(syslog.h)
AC_C_CONST

dnl ===========================
dnl checking library
dnl ===========================
AC_ARG_WITH(gdbmlib,
  [  --with-gdbmlib=<path> path to the gdbm library installation],
  [GDBMLIB_PREFIX=$with_gdbmlib
  AC_SUBST(GDBMLIB_PREFIX)
  GDBM_LIB="-L${GDBMLIB_PREFIX} -lgdbm"],
  [GDBM_LIB="-lgdbm"]
)
AC_SUBST(GDBM_LIB)
AC_CHECK_LIB(gdbm,gdbm_open,,
  AC_MSG_ERROR("You must call configure with the --with-gdbmlib option.")
)

AC_CHECK_LIB(crypt,crypt,
  [CRYPT_LIB="-lcrypt"],
  AC_MSG_ERROR("crypt library not found.")
)
AC_SUBST(CRYPT_LIB)

AC_CHECK_LIB(pthread,pthread_create,
  [PTHREAD_LIB="-lpthread"],
  AC_MSG_ERROR("pthread library not fount.")
)
AC_SUBST(PTHREAD_LIB)

dnl ===========================
dnl Path section
dnl ===========================
AC_MSG_CHECKING(for prefix)
if test "${prefix}" = "NONE" ; then
	prefix=/usr/local
fi
AC_MSG_RESULT($prefix)


AC_MSG_CHECKING(for exec_prefix)
if test "${exec_prefix}" = "NONE" ; then
	exec_prefix=$prefix
fi
AC_MSG_RESULT($exec_prefix)

_sysconfdir=`eval echo $sysconfdir`
AC_DEFINE_UNQUOTED(CONFDIR,"$_sysconfdir", Define the default path to the configuration file)

_localstatedir=`eval echo $localstatedir`
AC_DEFINE_UNQUOTED(DATABASEDIR,"$_localstatedir", Define the default path to the database files)

dnl ===========================
dnl configure options
dnl ===========================
AC_ARG_ENABLE(debug,
[  --enable-debug         enable debugging ],, enable_debug=no)

if test "$enable_debug" = yes; then
    DFLAGS="-g"
    AC_DEFINE(_DEBUG,1,Define if you want create a debugging version)
fi
AC_SUBST(DFLAGS)


dnl ===========================
dnl end 
dnl ===========================

AC_OUTPUT(Makefile src/Makefile etc/Makefile)
