dnl *************************************************************
dnl *
dnl * This is a part of ebotula.
dnl * It is distributed under the GNU General Public License
dnl * See the file COPYING for details.
dnl *
dnl * (c)2003 Steffen Laube <realebula@gmx.de>
dnl *************************************************************
dnl run first:
dnl
dnl aclocal && autoconf && automake -a
dnl
dnl to build the configure script
dnl *************************************************************

AC_INIT(src/ircbot.c)
AM_INIT_AUTOMAKE(ebotula,0.1.10-dev)

AM_SANITY_CHECK

AC_PROG_CC
CFLAGS=`echo $CFLAGS | sed 's/-O2//'`
CFLAGS=`echo $CFLAGS | sed 's/-g//'`

AC_PROG_INSTALL

AM_CONFIG_HEADER(src/config.h)

AC_HEADER_STDC
AC_HEADER_TIME
AC_CHECK_HEADERS(syslog.h pthread.h sys/poll.h ctype.h string.h gdbm.h sys/ipc.h sys/socket.h netdb.h netinet/in.h assert.h)
AC_C_CONST

dnl ===========================
dnl checking library
dnl ===========================
AC_ARG_WITH(gdbmlib,
  [  --with-gdbmlib=<path>   path to the gdbm library installation],
  [GDBMLIB_PREFIX=$with_gdbmlib
  AC_SUBST(GDBMLIB_PREFIX)
  GDBM_LIB="-L${GDBMLIB_PREFIX} -lgdbm"],
  [GDBM_LIB="-lgdbm"]
)
AC_SUBST(GDBM_LIB)
AC_CHECK_LIB(gdbm,gdbm_open,,
  AC_MSG_ERROR("Library not found...
You can call configure with the --with-gdbmlib 
option for the right path to the library."))


AC_CHECK_LIB(crypt,crypt,
  [CRYPT_LIB="-lcrypt"],
  AC_MSG_ERROR("crypt library not found.")
)
AC_SUBST(CRYPT_LIB)

AC_CHECK_LIB(pthread,pthread_create,
  [PTHREAD_LIB="-lpthread"],
  AC_MSG_ERROR("pthread library not fount.")
)
AC_SUBST(PTHREAD_LIB)

dnl ===========================
dnl Path section
dnl ===========================
test "x$prefix" = xNONE && prefix=$ac_default_prefix
test "x$exec_prefix" = xNONE && exec_prefix='${prefix}'

_sysconfdir=`eval echo $sysconfdir`
_databasedir=`eval echo $localstatedir`
_databasedir="$_databasedir/ebotula"

AC_DEFINE_UNQUOTED(CONFDIR,"$_sysconfdir", Define the default path to the configuration file)
AC_DEFINE_UNQUOTED(DATABASEDIR,"$_databasedir", Define the default path to the database files)

dnl ===========================
dnl configure options
dnl ===========================
lang=eng
AC_ARG_WITH(lang,[  --with-lang=LANG        Select the output language (default eng)],,)
if test "$with_lang" = de ; then
    AC_DEFINE(LANG_DE,,Define if you want german output.)
fi

debug=no
AC_ARG_ENABLE(debug,[  --enable-debug          Enable debugging],, enable_debug=no)

if test "$enable_debug" = no; then
    AC_DEFINE(NDEBUG,,Undefine if you want create a debugging version)
else
    DFLAGS=-g
fi
AC_SUBST(DFLAGS)

profile=no
AC_ARG_ENABLE(profile,[  --enable-profile        Enable profiling for debugging],, enable_profile=no)

if test "$enable_profile" = yes; then
    PFLAGS=-pg
fi
AC_SUBST(PFLAGS)

dnl ===========================
dnl end 
dnl ===========================

AC_OUTPUT(Makefile src/Makefile src/lang/Makefile etc/Makefile doc/Makefile)
